update to github

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
     <body>
         <div id="blogpage">
             <div class="headerblog"><p>header</p></div>
-            <div class="menu"><h2><a href="about.html">About</a> | <a href="gameplay.html">Gameplay</a> | News | <a id="accountID">Account</a></h2></div>
+            <div class="menu"><h2><a href="about.html">About</a> | <a href="gameplay.html">Gameplay</a> | <a id="accountID">Account</a></h2></div>
             <div id="posts">
             </div>
             <div class="comment">
