--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <div id="firstpage">
             <div class="imgfirstpage"><p>title</p></div>
-            <div class="btfirstpage1"><h2><a href="about.html">about</a></h2></div>
-            <div class="btfirstpage2"><h2><a href="homepage.html">Go to homepage</a></h2></div>
+            <a href="about.html" class="btfirstpage1"><h2>About</h2></a>
+            <a href="homepage.html" class="btfirstpage2"><h2>Go to homepage</h2></a>
         </div>
     </body>
 </html>
