--- a/account.html
+++ b/account.html
@@ -8,6 +8,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
      <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-storage.js"></script>
 
 <script>
   // Your web app's Firebase configuration
@@ -34,10 +35,16 @@
             <div class="text">
                 <h2>Account information</h2>
                 <h3>UserName: <input type="text" id="username" placeholder="username"></h3>
+                <h3>Bio:</h3>
+                <textarea id="bio" placeholder="Add your bio"></textarea>
+                <h3>Image:</h3>
+                <img id="profile-image" src="img/default.png">
+                <input id="image" type="file" name="profile-img" accept="image/gif, image/jpeg, image/png">
+                <button id="submit-image">Upload a new profile image</button>
             </div>
             <button id="update">Update</button><button id="logout" onclick="document.location='login.html'">Logout</button>
         </div>
-        <div><a href="blog.html" id="gobacktext">Go back to Blog page</a></div>
+        <div><a href="blog.html" id="gobacktext"><h2>Go back to Blog page</h2></a></div>
         <script src="js/update.js"></script>
         <script src="js/helpers.js"></script>
     </body>
