--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             </div>
             <button id="login">Login</button><button onclick="document.location='create.html'">Sign Up</button>
         </div>
-        <div><a href="homepage.html" id="gobacktext">Go Back to HomePage</a></div>
+        <div><a href="homepage.html" id="gobacktext"><h2>Go Back to HomePage</h2></a></div>
         <script src="js/auth.js"></script>
         <script src="js/helpers.js"></script>
     </body>
