๊Update img & system

--- a/account.html
+++ b/account.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <h1 class="loginheader">Amoung Us Shelter</h1>
+        <h1 class="loginheader">Among Us Shelter</h1>
         <div id="form">
             <div class="text">
                 <h2>Account information</h2>
@@ -43,8 +43,8 @@
                 <button id="submit-image">Upload a new profile image</button>
             </div>
             <button id="update">Update</button><button id="logout" onclick="document.location='login.html'">Logout</button>
+            <a href="blog.html" id="gobacktext"><h2>Go back to Blog page</h2></a>
         </div>
-        <div><a href="blog.html" id="gobacktext"><h2>Go back to Blog page</h2></a></div>
         <script src="js/update.js"></script>
         <script src="js/helpers.js"></script>
     </body>
