--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Amoung Us Shelter Blog</title>
+    <title>Among Us Shelter Blog</title>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
      <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-app.js"></script>
 
@@ -30,7 +30,7 @@
 </head>
     <body>
         <div id="blogpage">
-            <div class="headerblog"><p>header</p></div>
+            <img class="headerblog" src="img/blog.png" onclick="document.location='homepage.html'">
             <div class="menu"><h2><a href="about.html">About</a> | <a href="gameplay.html">Gameplay</a> | <a id="accountID">Account</a></h2></div>
             <div id="posts">
             </div>
