--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>Amoung Us Shelter</title>
+        <title>Among Us Shelter</title>
         <link rel="stylesheet" href="css/style.css">
          <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="firstpage">
-            <div class="imgfirstpage"><p>title</p></div>
+            <img class="imgfirstpage" src="img/header.png">
             <a href="about.html" class="btfirstpage1"><h2>About</h2></a>
             <a href="homepage.html" class="btfirstpage2"><h2>Go to homepage</h2></a>
         </div>
