--- a/login.html
+++ b/login.html
@@ -29,16 +29,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <h1 class="loginheader">Amoung Us Shelter</h1>
+        <h1 class="loginheader">Among Us Shelter</h1>
         <div id="form">
             <div class="text">
                 <h2>Login</h2>
                 <h3>E-mail: <input type="text" id="email" placeholder="example@mail.com"></h3>
                 <h3>Password: <input type="password" id="password" placeholder="******"></h3>
             </div>
-            <button id="login">Login</button><button onclick="document.location='create.html'">Sign Up</button>
+            <button id="login">Login</button><button onclick="document.location='create.html'">Sign Up</button> 
+            <a href="homepage.html" id="gobacktext"><h2>Go Back to HomePage</h2></a>
         </div>
-        <div><a href="homepage.html" id="gobacktext"><h2>Go Back to HomePage</h2></a></div>
+        <div></div>
         <script src="js/auth.js"></script>
         <script src="js/helpers.js"></script>
     </body>
