--- a/create.html
+++ b/create.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <h1 class="loginheader">Amoung Us Shelter</h1>
+        <h1 class="loginheader">Among Us Shelter</h1>
         <div id="form">
             <div class="text">
                 <h2>Create Your Account</h2>
