--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 				<button id="submit">Submit</button>
 			</div>
             </div>
-            <div class="footerblog"><p>footer</p></div>
+            <div class="footerblog"><h4>© 2020 Among Us Shelter - All Rights Reserved</h4></div>
         </div>
         <script src="js/blog.js"></script>
         <script src="js/helpers.js"></script>
