--- a/gameplay.html
+++ b/gameplay.html
@@ -8,8 +8,26 @@
         <div id="menupage">
             <img class="header" src="img/gameplay.png" onclick="document.location='homepage.html'">
             <div class="menu"><h2><a href="about.html">About</a></h2><h2>Gameplay</h2><h2><a href="http://www.innersloth.com/gameAmongUs.php">INNERSLOTH</a></h2><h2><a href="login.html">Blogs</a></h2></div>
-            <div id="content"><h2>Gameplay</h2><p>text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p></div>
-            <div class="footer"><p>footer</p></div>
+            <div id="content"><h2>Gameplay</h2>
+                <img src="img/AboutCrew.png" class="detail">
+                <ul>
+                    <li>Win by completing tasks to prepare the ship or ejecting all Impostors.</li>
+                    <li>React quickly to undo the Impostor's sabotages.</li>
+                    <li>Check the Admin map and Security cameras to keep tabs on other Crewmates.</li>
+                    <li>Report any dead bodies immediately to start discussion of who the suspected Impostor is.</li>
+                    <li>Call emergency meetings to discuss suspicious behavior.</li>
+                    <li>Vote to eject suspected Impostors.</li>
+                </ul>
+                <img src="img/AboutImpostor.png" class="detail">
+                <ul>
+                    <li>Kill crewmates and frame bystanders.</li>
+                    <li>Pretend to run tasks to blend in with the crewmates.</li>
+                    <li>Sneak through the vents to quickly move about the ship.</li>
+                    <li>Use sabotages to cause chaos and divide the crew.</li>
+                    <li>Close doors to trap victims and kill in private.</li>
+                </ul>
+            </div>
+            <div class="footer"><h4>© 2020 Among Us Shelter - All Rights Reserved</h4></div>
         </div>
     </body>
 </html>
