--- a/homepage.html
+++ b/homepage.html
@@ -10,9 +10,10 @@
         <div id="menupage">
             <img class="header" src="img/title.png">
             <div class="menu"><h2><a href="about.html">About</a></h2><h2><a href="gameplay.html">Gameplay</a></h2><h2><a href="http://www.innersloth.com/gameAmongUs.php">INNERSLOTH</a></h2><h2><a href="login.html">Blogs</a></h2></div>
-            <div id="content" class="center0">
+            <div id="content">
                     <h1 class="center0">News</h1>
-                    <a class="twitter-timeline" href="https://twitter.com/AmongUsGame?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1338907105722589187%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.dbltap.com%2Fposts%2Famong-us-switch-crossplay-does-the-new-version-have-crossplay-01esktpnfpsr"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <div class="center0"><a class="twitter-timeline" href="https://twitter.com/AmongUsGame?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1338907105722589187%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.dbltap.com%2Fposts%2Famong-us-switch-crossplay-does-the-new-version-have-crossplay-01esktpnfpsr" data-width="800"
+  data-height="800"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
             </div>
             <div class="footer"><h4>© 2020 Among Us Shelter - All Rights Reserved</h4></div>
         </div>
